# DaysToBananaDeath

./: .env  .gitignore  LICENSE  Procfile  README.md  pyproject.toml  requirements.txt  streamlit_app.py  test_api.py
backend/: README.md  railway.json  requirements.txt
backend/app/: config.py  main.py
backend/app/api/endpoints/: correction.py  model_info.py  predict.py  presign.py
backend/app/api/services/: file_validator.py  predictor.py  rate_limiter.py  recaptcha.py  s3.py
backend/tests/: test_predict_endpoint.py  test_predictor_mock_prediction.py  test_predictor_utils.py
configs/: config.yaml
configs/callbacks/: accuracy_logger.yaml  default.yaml  f1_logger.yaml  lr_monitor.yaml  metrics_logger.yaml  model_checkpoint.yaml  precision_logger.yaml  recall_logger.yaml
configs/data/: default.yaml
configs/experiment/: debug.yaml
configs/logger/: tensorboard.yaml  wandb.yaml
configs/model/: efficientnet_b0.yaml  mobilenet_v3_small.yaml  resnet18.yaml  resnet50.yaml  simple_cnn.yaml  vit_b_16.yaml  yolo.yaml
configs/trainer/: default.yaml
frontend/: README.md  index.html  package.json  railway.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  endpoints.ts
frontend/src/components/: BananaPixelIcon.tsx  CameraCapture.tsx  CorrectionForm.tsx  ErrorAlert.tsx  FileDropzone.tsx  LatencyBadge.tsx  Layout.tsx  PredictionResult.tsx  Spinner.tsx
frontend/src/config/: api.ts
frontend/src/pages/: Home.tsx  Predict.tsx  Settings.tsx
frontend/src/store/: useSettings.ts
frontend/src/types/: index.ts
frontend/src/utils/: errorUtils.ts  i18n.ts  imageUtils.ts  theme.ts
ml/configs/: config.yaml
ml/configs/callbacks/: early_stopping.yaml
ml/src/: train.py  trainer_helper.py
src/: api.py  callbacks.py  dataset.py  inference.py  model.py  trainer_helper.py
utils/: complete_dataset_with_yolo.py  create_datasetv3.py  integrate_gitbanana_dataset.py  reduce_unknowns.py
