[project]
name = "daytobananadeath"
version = "0.1.0"
description = "Banana ripeness classification with PyTorch Lightning"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "lightning>=2.0.0",
    "pillow>=9.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "torchmetrics>=0.11.0",
    "albumentations>=1.3.0",
    "wandb>=0.15.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "tensorboard>=2.20.0",
    "onnx>=1.15.0",          # Pour l'export ONNX
    "onnxruntime>=1.16.0",   # Pour l'inférence ONNX (optionnel)
]
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
